[package]
name = "eodhistoricaldata_api"
version = "0.1.0"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "A rust adapter eodhistoricaldata, a provider of financial data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/eodhistoricaldata_api"
readme = "README.md"
keywords = ["finance", "eodhistoricaldata", "stock", "share"]
categories = ["api-bindings"]

[dependencies]
