[package]
name = "eodhistoricaldata_api"
version = "0.4.1"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "A rust adapter eodhistoricaldata, a provider of financial data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/eodhistoricaldata_api"
readme = "README.md"
keywords = ["finance", "eodhistoricaldata", "stock", "share"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { git = "https://github.com/chronotope/chrono.git" }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
